Validation funcs add & register components updated

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 body {
     margin: 0;
-    /* background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqeZ5mVbarupP8UWVic7UtumtbIyE0GY-ucQ&usqp=CAU'); */
+    background-image: url('https://img.freepik.com/free-vector/watercolor-stains-abstract-background_23-2149107181.jpg?w=2000');
 }
 
 .bg-blur {
