--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,126 @@
 
 body {
     margin: 0;
-    background-image: url('https://img.freepik.com/free-vector/watercolor-stains-abstract-background_23-2149107181.jpg?w=2000');
 }
 
 .bg-blur {
     background: transparent;
     backdrop-filter: blur(8px);
+}
+
+/* BACKGROUND */
+
+
+.background {
+    z-index: -1;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    background: #ffffff;
+    overflow: hidden;
+}
+.background li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgb(63, 130, 255);
+    animation: animate 10s linear infinite;
+}
+
+
+/* Kutucukların Özellikleri  */
+
+.background li:nth-child(0) {
+    left: 14%;
+    width: 149px;
+    height: 149px;
+    bottom: -149px;
+    animation-delay: 1s;
+}
+.background li:nth-child(1) {
+    left: 24%;
+    width: 107px;
+    height: 107px;
+    bottom: -107px;
+    animation-delay: 3s;
+}
+.background li:nth-child(2) {
+    left: 34%;
+    width: 146px;
+    height: 146px;
+    bottom: -146px;
+    animation-delay: 3s;
+}
+.background li:nth-child(3) {
+    left: 44%;
+    width: 181px;
+    height: 181px;
+    bottom: -181px;
+    animation-delay: 7s;
+}
+.background li:nth-child(4) {
+    left: 10%;
+    width: 175px;
+    height: 175px;
+    bottom: -175px;
+    animation-delay: 10s;
+}
+.background li:nth-child(5) {
+    left: 90%;
+    width: 112px;
+    height: 112px;
+    bottom: -112px;
+    animation-delay: 21s;
+}
+.background li:nth-child(6) {
+    left: 56%;
+    width: 170px;
+    height: 170px;
+    bottom: -170px;
+    animation-delay: 28s;
+}
+.background li:nth-child(7) {
+    left: 66%;
+    width: 108px;
+    height: 108px;
+    bottom: -108px;
+    animation-delay: 6s;
+}
+.background li:nth-child(8) {
+    left: 76%;
+    width: 178px;
+    height: 178px;
+    bottom: -178px;
+    animation-delay: 27s;
+}
+.background li:nth-child(9) {
+    left: 86%;
+    width: 103px;
+    height: 103px;
+    bottom: -103px;
+    animation-delay: 35s;
+}
+
+/* Kutucukların Hareketleri */
+
+@keyframes animate {
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+        width: 10px;
+        height: 10px;
+    }
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+
+    }
 }
